--- a/index.html
+++ b/index.html
@@ -19,17 +19,11 @@
                                 <div class="d-flex">
                                     <img src="./Fotos/Edward_Jenner.jpg" alt="" srcset="" class="border border-4 rounded-circle">
                                     <div class="ps-lg-3">
-                                        <h4 class="m-1 h6">Edward Jenner</h4>
-                                        <p class="m-2 h6">
-                                            Hola :D
+                                        <h4 class="m-1 h4">Edward Jenner</h4>
+                                        <p class="fs-6 font-monospace text-start text-lg-center text-justify">
+                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi id nobis illum sed consequatur corrupti minima possimus repellat amet accusamus numquam, iste delectus nam qui dolorem aspernatur nihil, modi eum.
                                         </p>
                                     </div>
-                                </div>
-
-                                <div>
-                                    <p class="fs-6">
-                                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi id nobis illum sed consequatur corrupti minima possimus repellat amet accusamus numquam, iste delectus nam qui dolorem aspernatur nihil, modi eum.
-                                    </p>
                                 </div>
                             </div>
                         </article>
