--- a/index.html
+++ b/index.html
@@ -6,21 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="estilos.css" media="screen" />
-    <title>Document</title>
+    <title>Proyecto 1</title>
 </head>
 <body>
-    <main class="container d-flex justify-content-center align-items-center alto-100">
+    <div class="container d-flex justify-content-center align-items-center">
+        <div class="row">
+            <div class="col-12 col-lg-12 bg-info fs-6 lh-1">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit officiis nesciunt, quisquam debitis dolorem temporibus ea sequi esse cum animi quaerat eligendi perferendis excepturi aliquid iure facilis nisi corrupti omnis?
+                </p>
+            </div>
+        </div>
+    </div>
+    <main class="container d-flex justify-content-center align-items-center ">
         <div class="row">
             <div class="col-12 col-lg-9">
                 <div class="row">
-                    <div class="col-12 col-lg-8 bg-success">
-                        <article class="card">
+                    <div class="col-12 col-lg-8 p-2">
+                        <article class="card h-100 bg-success">
                             <div class="card-body">
-                                <div class="d-flex">
+                                <div class="d-flex mb-3">
                                     <img src="./Fotos/Edward_Jenner.jpg" alt="" srcset="" class="border border-4 rounded-circle">
                                     <div class="ps-lg-3">
                                         <h4 class="m-1 h4">Edward Jenner</h4>
-                                        <p class="fs-6 font-monospace text-start text-lg-center text-justify">
+                                        <p class="fs-6 font-monospace text-start text-lg-center text-justify lh-1">
                                             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi id nobis illum sed consequatur corrupti minima possimus repellat amet accusamus numquam, iste delectus nam qui dolorem aspernatur nihil, modi eum.
                                         </p>
                                     </div>
@@ -28,28 +37,66 @@
                             </div>
                         </article>
                     </div>
-                    <div class="col-12 col-lg-4 bg-primary">
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid error nemo nostrum harum laborum asperiores eveniet ab. Rerum eos ullam nam doloremque excepturi commodi, atque tempora, voluptas eum saepe quas.
-                        </p>
+                    <div class="col-12 col-lg-4 p-2">
+                        <article class="card h-100 bg-primary">
+                            <div class="card-body">
+                                <div class="d-flex mb-3">
+                                    
+                                    <div class="ps-lg-3">
+                                        <h4 class="m-1 h4">Edward Jenner</h4>
+                                        <p class="fs-6 font-monospace text-start text-lg-center text-justify lh-1">
+                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi id nobis illum sed consequatur corrupti minima possimus repellat amet accusamus numquam, iste delectus nam qui dolorem aspernatur nihil, modi eum.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
                     </div>
-                    <div class="col-12 col-lg-4 bg-warning">
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid error nemo nostrum harum laborum asperiores eveniet ab. Rerum eos ullam nam doloremque excepturi commodi, atque tempora, voluptas eum saepe quas.
-                        </p>
+                    <div class="col-12 col-lg-4 p-2">
+                        <article class="card h-100 bg-warning">
+                            <div class="card-body">
+                                <div class="d-flex mb-3">
+                                    
+                                    <div class="ps-lg-3">
+                                        <h4 class="m-1 h4">Edward Jenner</h4>
+                                        <p class="fs-6 font-monospace text-start text-lg-center text-justify lh-1">
+                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi id nobis illum sed consequatur corrupti minima possimus repellat amet accusamus numquam, iste delectus nam qui dolorem aspernatur nihil, modi eum.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
                     </div>
-                    <div class="col-12 col-lg-8 bg-danger">
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid error nemo nostrum harum laborum asperiores eveniet ab. Rerum eos ullam nam doloremque excepturi commodi, atque tempora, voluptas eum saepe quas.
-                        </p>
+                    <div class="col-12 col-lg-8 p-2">
+                        <article class="card h-100 bg-danger">
+                            <div class="card-body">
+                                <div class="d-flex mb-3">
+                                    <div class="ps-lg-3">
+                                        <h4 class="m-1 h4">Edward Jenner</h4>
+                                        <p class="fs-6 font-monospace text-start text-lg-center text-justify lh-1">
+                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi id nobis illum sed consequatur corrupti minima possimus repellat amet accusamus numquam, iste delectus nam qui dolorem aspernatur nihil, modi eum.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
                     </div>
                 </div>
             </div>
 
-            <div class="col-12 col-lg-3 bg-secondary">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga libero, molestiae ipsam ut, dolore magnam placeat nihil ipsum itaque, consequatur deserunt obcaecati cumque nobis consectetur nesciunt. Maxime tempora rerum temporibus.
-                </p>
+            <div class="col-12 col-lg-3 p-2">
+                <article class="card h-100 bg-secondary">
+                    <div class="card-body">
+                        <div class="d-flex">
+                            <div class="ps-lg-3">
+                                <h4 class="m-1 h4">Edward Jenner</h4>
+                                <p class="fs-6 font-monospace text-start text-lg-center text-justify lh-1">
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi id nobis illum sed consequatur corrupti minima possimus repellat amet accusamus numquam, iste delectus nam qui dolorem aspernatur nihil, modi eum.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
             </div>
         </div>
     </main>
